<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:scrollbars="vertical"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <!-- TODO: add live current-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/status"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/status_label"
                android:textSize="16sp"
                tools:text="@string/charging" />

            <TextView
                android:id="@+id/battery_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/status"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp"
                tools:text="(U: 4.214 V, T: 38 C)" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/enable_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/colorSecondaryContainer"
            app:contentPaddingBottom="8dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="8dp"
            app:strokeWidth="0dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/enable_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSecondaryContainer"
                app:trackTint="?attr/colorSurface" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/disable_charge_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="?attr/colorSecondaryContainer"
            app:contentPaddingBottom="8dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="8dp"
            app:strokeWidth="0dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/disable_charge_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disable_charge_now"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSecondaryContainer"
                app:trackTint="?attr/colorSurface" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:contentPadding="16dp">

            <RelativeLayout
                android:id="@+id/relative_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/lin_spinners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <NumberPicker
                            android:id="@+id/max_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="3dp"
                            android:descendantFocusability="blocksDescendants"
                            android:gravity="center_horizontal" />

                        <TextView
                            android:id="@+id/max_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="6dp"
                            android:gravity="center_horizontal"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp"
                            tools:text="Limit charging to 85%" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <NumberPicker
                            android:id="@+id/min_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="3dp"
                            android:descendantFocusability="blocksDescendants"
                            android:gravity="center_horizontal" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/min_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="6dp"
                            android:gravity="center_horizontal"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp"
                            tools:text="Recharge below 75%" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reset_battery_stats"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lin_spinners"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:text="@string/reset_stats" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/battery_info"
            android:hint="@string/status_ctrl_data_label">

            <io.github.muntashirakon.bcl.TextInputTextView
                android:id="@+id/status_ctrl_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/file_data"
                android:textIsSelectable="true" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
